--- a/004-props.html
+++ b/004-props.html
@@ -48,6 +48,10 @@
 	      		title="Stuffed Chard"
 	      		instructions="Stuff the chard..."
 	      	/>
+          <Recipe
+            title="Foobar"
+            instructions="Eat mush add bar"
+          />
 	      	<Recipe
 	      		title="Eggplant and Polenta"
 	      		instructions="Put the eggplant in the oven..."
